# bridgent

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
src/: agent.rs  arc.rs  cli.rs  config.rs  context.rs  lib.rs  main.rs  process.rs  providers.rs  refine.rs  session.rs  streaming.rs  tools.rs
src/bridle/: __init__.py  tools.py
tests/: e2e.rs  test_tools_base.py  test_tools_bash.py  test_tools_files.py
