[package]
name = "bridgent"
version = "0.4.0"
edition = "2021"
description = "A minimal, provider-agnostic coding agent harness"
license = "MIT"

[dependencies]
ctrlc = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.12", features = ["json"] }
wait-timeout = "0.2"

[profile.release]
lto = true
strip = true

[dev-dependencies]
tempfile = "3"
