[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bridle"
version = "0.1.0"
description = "A minimal, provider-agnostic coding agent harness"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
]

[project.scripts]
bridle = "bridle.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
